--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon -e '*'",
+    "start": "nodemon -e '*'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "body-parser": "^2.2.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
   }
